# ripgrep

./: .gitignore  Cargo.toml  build.rs
crates/cli/src/: decompress.rs  escape.rs  human.rs  lib.rs  pattern.rs  process.rs  wtr.rs
crates/core/: README.md  app.rs  args.rs  config.rs  logger.rs  main.rs  messages.rs  path_printer.rs  search.rs  subject.rs
crates/globset/src/: glob.rs  lib.rs  pathutil.rs
crates/grep/src/: lib.rs
crates/ignore/src/: default_types.rs  dir.rs  gitignore.rs  lib.rs  overrides.rs  pathutil.rs  types.rs  walk.rs
crates/matcher/src/: interpolate.rs  lib.rs
crates/pcre2/: README.html
crates/pcre2/src/: error.rs  matcher.rs
crates/printer/: Cargo.toml
crates/printer/src/: color.rs  counter.rs  json.rs  jsont.rs  lib.rs  macros.rs  standard.rs  stats.rs  summary.rs  util.rs
crates/regex/src/: ast.rs  config.rs  error.rs  lib.rs  literal.rs  matcher.rs  multi.rs  non_matching.rs  strip.rs  word.rs
crates/searcher/src/: lib.rs  line_buffer.rs  lines.rs  macros.rs  sink.rs  testutil.rs
crates/searcher/src/searcher/: core.rs  glue.rs  mmap.rs  mod.rs
